--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 pytest-mock==3.12.0
 pytest-timeout==2.2.0
+requests-mock==1.11.0
 
 # Code quality
 black==23.11.0
