--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -7,6 +7,7 @@ asyncua==1.0.4
 pyyaml==6.0.1
 python-dateutil==2.8.2
 numpy==1.24.3
+requests==2.31.0
 
 # Monitoring (lightweight)
 prometheus-client==0.19.0
